src/objects/Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Item_Total__c</fullName>
        <formula>Unit_Price__c  *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Item Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Merchandise__c</fullName>
        <label>Merchandise</label>
        <referenceTo>Merchandise__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Line Item</label>
    <nameField>
        <label>Line Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validate_Discount</fullName>
        <active>true</active>
        <description>Discount must be more then 0 and less then 99.</description>
        <errorConditionFormula>Discount__c &lt; 0 || Discount__c &gt; 99</errorConditionFormula>
        <errorDisplayField>Discount__c</errorDisplayField>
        <errorMessage>Discount percent cannot be less then 0 and exceed 99.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Quantity</fullName>
        <active>true</active>
        <description>Quantity should be more then zero.</description>
        <errorConditionFormula>Quantity__c &lt; 0 || (  Quantity__c &gt;  Merchandise__r.Quantity__c  )</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>You must order at least one item.
You can&apos;t order more items that are in stock.</errorMessage>
    </validationRules>
</CustomObject>